Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27650

Pie Chart Customization Example doesn't scale properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • None
    • Qt Creator 7.0.1
    • Android Support
    • Tested on Windows using Android 10 emulator and Oneplus 5 running Android 10
    • Android, Windows
    • 0cbae2fb8f (qt/qtcharts/dev) 0cbae2fb8f (qt/tqtc-qtcharts/dev) eb6cb5c5f6 (qt/qtcharts/6.4) afddbad1a6 (qt/qtcharts/6.3) afddbad1a6 (qt/tqtc-qtcharts/6.3) eb6cb5c5f6 (qt/tqtc-qtcharts/6.4) b78f58d784 (qt/tqtc-qtcharts/6.2) eb6cb5c5f6 (qt/qtcharts/6.4.0)
    • 2022wk30FOQtforAndroid, 2022wk32FOQtforAndroid

      Pie Chart Cuztomization Example Doesn't scale properly on Android devices. Pie chart can't be read and some UI elements aren't fully seeable.

        For Gerrit Dashboard: QTCREATORBUG-27650
        # Subject Branch Project Status CR V

            eliashautala Elias Hautala
            eliashautala Elias Hautala
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: