Piechartcustomization: add function that changes widgets position

Adds function that changes widgets position on layout based on the
windows aspect ratio. Before this the chart was unreadable and settings
could not be fully seen when using the example on Android in portrait.

Fixes: QTCREATORBUG-27650
Pick-to: 6.2 6.3 6.4
Change-Id: Ieffbd80ca52131b27a524084d8cc81b3acfa335f
Reviewed-by: Rami Potinkara <rami.potinkara@qt.io>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
Reviewed-by: Jani Korteniemi <jani.korteniemi@qt.io>